Fix bug with shifting background image

--- a/src/app/components/introduction-image/introduction-image.component.css
+++ b/src/app/components/introduction-image/introduction-image.component.css
@@ -3,6 +3,7 @@
     background: url("/src/assets/general-images/background.jpg") no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
+    background-position-y: 100px;
     opacity:0;
 
     width: 100%;
